2009-01-27  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* docs/reference/glib/glib-sections.txt:
	* docs/reference/macros_misc.sgml:
	* docs/reference/glib/tmpl/types.sgml: Add
	G_GOFFSET_FORMAT and friends. Bug #563141.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/glib/Makefile.am:
	  Add SCAN_OPTIONS=--ignore-decorators="GLIB_VAR" to Makefile.am to fix
	  on problem with the doc build.

2009-01-21  Tor Lillqvist  <tml@novell.com>

	* glib/gwin32.c (g_win32_locale_filename_from_utf8): Drop the code
	in the else branch of #if GLIB_CHECK_VERSION (2, 19, 0). Drop
	unused variables.

2009-01-20  Matthias Clasen  <mclasen@redhat.com>

	Bug 568294 – A wrong reference in the description of 
	g_bookmark_file_add_application()

	* glib/gbookmarkfile.c (g_bookmark_file_add_application):
	Fix a typo in the docs. Pointed out by Takeshi Aihana

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.5 ===

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstrfuncs.c (g_strdup_printf): Fix a doc typo.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 512779 – --disable-regex breaks compilation
	
	* configure.in: Define an ENABLE_REGEX macro

	* gobject/gboxed.c: Don't refer to g_regex_ref if ENABLE_REGEX
	is not defined.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/gbsearcharray.h: Quell some compiler warnings.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/pcre: Update to PCRE 7.8

2009-01-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 567977 – textdomain() macro should not return NULL when 
	ENABLE_NLS is not set

	* glib/glibintl.h: If !ENABLE_NLS, make textomain() macro 
	return "messages" in case of a NULL argument. Patch by
	Peter Kjellerstedt.

2009-01-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 567838 – G_STRUCT_OFFSETOF fails to compile under icc 9.1
